--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
     <ul class="menu menu--header-menu">
       <li class="menu__item"><a class="menu__link" href="https://exrates.me/dashboard"><span class="menu__link-text">Trade</span></a></li>
       <!--<li class="menu__item menu__item&#45;&#45;with-submenu" *ngIf="isAuthenticated()"><a class="menu__link menu__link&#45;&#45;drop"><span class="menu__link-text">Funds</span></a>-->
-      <li class="menu__item menu__item--with-submenu" ><a class="menu__link menu__link--drop"><span class="menu__link-text">Funds</span></a>
+      <li class="menu__item menu__item--with-submenu" routerLink="/funds" ><a class="menu__link menu__link--drop"><span class="menu__link-text">Funds</span></a>
         <div class="submenu">
           <ul class="menu submenu__list">
             <li class="submenu__item"><a class="submenu__link" routerLink="balance"><span class="menu__link-text">Balance</span></a></li>
@@ -14,7 +14,7 @@
         </div>
       </li>
       <!--<li class="menu__item menu__item&#45;&#45;with-submenu" *ngIf="isAuthenticated()"><a class="menu__link menu__link&#45;&#45;drop" ><span class="menu__link-text">Orders</span></a>-->
-      <li class="menu__item menu__item--with-submenu"><a class="menu__link menu__link--drop" ><span class="menu__link-text">Orders</span></a>
+      <li class="menu__item menu__item--with-submenu" routerLink="open-orders"><a class="menu__link menu__link--drop" ><span class="menu__link-text">Orders</span></a>
         <div class="submenu">
           <ul class="menu submenu__list">
             <li class="submenu__item"><a class="submenu__link"  routerLink="open-orders"><span class="menu__link-text">Open orders</span></a></li>
@@ -34,102 +34,6 @@
       </li>
       <li class="menu__item"><a class="menu__link" href="https://exrates.me/dashboard"><span class="menu__link-text">News</span></a></li>
     </ul>
-    <!--<ul class="menu">-->
-      <!--<li class="menu__item menu__item&#45;&#45;with-submenu">-->
-        <!--<a class="menu__link" href="#">-->
-          <!--<div class="menu__link-icon-wrap"><img class="header-button__img" src="../../assets/img/header-notification.svg" alt="notification"><span class="header-button__notification-label">1</span></div>-->
-        <!--</a>-->
-        <!--<div class="submenu submenu&#45;&#45;notification">-->
-          <!--<ul class="menu submenu__list">-->
-            <!--<li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You received 0.01 BTC by inner transfer</span></a></li>-->
-            <!--<li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You received 0.01 BTC by inner transfer</span></a></li>-->
-            <!--<li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You get new message from support for your ticket #45173</span></a></li>-->
-            <!--<li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You received 0.01 BTC by inner transfer</span></a></li>-->
-            <!--<li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You received 0.01 BTC by inner transfer</span></a></li>-->
-            <!--<li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You received 0.01 BTC by inner transfer</span></a></li>-->
-            <!--<li class="submenu__item submenu__item&#45;&#45;last"><a class="submenu__link submenu__link&#45;&#45;center" href="#"><span class="menu__link-text">See all notifications</span></a></li>-->
-          <!--</ul>-->
-        <!--</div>-->
-      <!--</li>-->
-      <!--<li class="menu__item">-->
-        <!--<a class="menu__link" href="#">-->
-          <!--<div class="menu__link-icon-wrap"><img class="header-button__img" src="../../assets/img/header-learn.svg" alt="learn"></div>-->
-        <!--</a>-->
-      <!--</li>-->
-      <!--<li class="menu__item" >-->
-        <!--<a class="menu__link" (click)="toggleTheme()">-->
-          <!--<div class="menu__link-icon-wrap">-->
-            <!--<img class="header-button__img" src="../../assets/img/header-lamp.svg" alt="Theme" >-->
-          <!--</div>-->
-        <!--</a>-->
-      <!--</li>-->
-    <!--</ul>-->
-    <!--<ul class="menu">-->
-      <!--<li class="menu__item menu__item&#45;&#45;with-submenu" *ngIf="isAuthenticated()">-->
-        <!--<a class="menu__link" href="">-->
-          <!--<div class="holdings"><span class="holdings__title">Estimated Holdings</span>-->
-            <!--<div class="holdings__info">-->
-              <!--<div class="holdings__info-item"><img class="holdings__info-item-icon" src="../../assets/img/btc-icon-small.svg" alt="btc"> 1.22764</div>-->
-              <!--<div class="holdings__info-item"><img class="holdings__info-item-icon" src="../../assets/img/dollar-icon-small.svg" alt="dollar"> 43 522 764</div>-->
-            <!--</div>-->
-          <!--</div>-->
-        <!--</a>-->
-        <!--<div class="submenu">-->
-          <!--<div class="holdings-mob__pairs holdings-mob__pairs&#45;&#45;active">-->
-            <!--<div class="holdings-mob__pairs-row"><span class="holdings-mob__pairs-row-title">Fiat</span>-->
-              <!--<div class="holdings-mob__radio-row">-->
-                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/dollar-icon-small.svg">USD-->
-                  <!--<input class="holdings-mob__radio-input" type="radio" value="USD" name="radio-input-fiat"><span class="holdings-mob__radio-icon"></span>-->
-                <!--</label>-->
-                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/dollar-icon-small.svg">EUR-->
-                  <!--<input class="holdings-mob__radio-input" type="radio" value="EUR" name="radio-input-fiat"><span class="holdings-mob__radio-icon"></span>-->
-                <!--</label>-->
-                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/dollar-icon-small.svg">IDR-->
-                  <!--<input class="holdings-mob__radio-input" type="radio" value="IDR" name="radio-input-fiat"><span class="holdings-mob__radio-icon"></span>-->
-                <!--</label>-->
-              <!--</div>-->
-            <!--</div>-->
-            <!--<div class="holdings-mob__pairs-row"><span class="holdings-mob__pairs-row-title">Altcoins</span>-->
-              <!--<div class="holdings-mob__radio-row">-->
-                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/btc-icon.svg">BTC-->
-                  <!--<input class="holdings-mob__radio-input" type="radio" value="BTC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
-                <!--</label>-->
-                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/eth-icon.svg">ETH-->
-                  <!--<input class="holdings-mob__radio-input" type="radio" value="ETH" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
-                <!--</label>-->
-                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/zec-icon.svg">ZEC-->
-                  <!--<input class="holdings-mob__radio-input" type="radio" value="ZEC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
-                <!--</label>-->
-                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/btc-icon.svg">BTC-->
-                  <!--<input class="holdings-mob__radio-input" type="radio" value="BTC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
-                <!--</label>-->
-                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/eth-icon.svg">ETH-->
-                  <!--<input class="holdings-mob__radio-input" type="radio" value="ETH" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
-                <!--</label>-->
-                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/zec-icon.svg">ZEC-->
-                  <!--<input class="holdings-mob__radio-input" type="radio" value="ZEC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
-                <!--</label>-->
-                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/btc-icon.svg">BTC-->
-                  <!--<input class="holdings-mob__radio-input" type="radio" value="BTC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
-                <!--</label>-->
-                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/eth-icon.svg">ETH-->
-                  <!--<input class="holdings-mob__radio-input" type="radio" value="ETH" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
-                <!--</label>-->
-                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/zec-icon.svg">ZEC-->
-                  <!--<input class="holdings-mob__radio-input" type="radio" value="ZEC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
-                <!--</label>-->
-              <!--</div>-->
-            <!--</div>-->
-            <!--<div class="wrap-input wrap-input&#45;&#45;search">-->
-              <!--<input class="input input&#45;&#45;with-icon input&#45;&#45;transparent input&#45;&#45;bd-dark-blue" id="search-currency" type="text" required=""><span class="wrap-input__icon wrap-input__icon&#45;&#45;white"><img src="../../assets/img/search-white.svg"></span>-->
-              <!--<label class="wrap-input__label wrap-input__label&#45;&#45;with-icon wrap-input__label&#45;&#45;white">Currency</label>-->
-              <!--<div class="wrap-input__line wrap-input__line&#45;&#45;bd-dark-blue"></div>-->
-            <!--</div>-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</li>-->
-    <!--</ul>-->
-
     <div *ngIf="isAuthenticated(); else reg">
       <a class="header__auth" >{{ getUsername() }}</a>
     </div>
@@ -156,7 +60,7 @@
             <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag" src="../../assets/img/flag-cn.svg" alt=""><span class="language__text">Chinese</span></a></li>
             <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag" src="../../assets/img/flag-pl.svg" alt=""><span class="language__text">Polish</span></a></li>
             <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag" src="../../assets/img/flag-en.svg" alt=""><span class="language__text">Hindi</span></a></li>
-            <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag" src="../../assets/img/flag-cn.svg" alt=""><span class="language__text">Ukraininan</span></a></li>
+            <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag" src="../../assets/img/flag-cn.svg" alt=""><span class="language__text">Ukrainian</span></a></li>
           </ul>
         </div>
       </li>
