--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -28,7 +28,7 @@
       </thead>
       <tbody class="table__body table__body--none-shadow">
         <!-- t-row start-->
-        <ng-container *ngFor="let item of openOrders">
+        <ng-container *ngFor="let item of orderItems">
           <tr class="table__row--mob" [attr.data-id]="item.id" (click)="toggleDetails($event)">
             <td class="table__cell table__cell--tal">
               <div>{{item.currencyPairName}}</div>
@@ -77,7 +77,8 @@
       </tbody>
     </table>
     <!--filter-popup start-->
-    <div class="filters-popup" [ngClass]="{'show-filter-popup': showFilterPopup}">
+    <!--<div class="filters-popup" [ngClass]="{'show-filter-popup': showFilterPopup}">-->
+    <div class="filters-popup">
       <div class="filters-popup__header">
         <div class=" filters-popup__title">
           Order filters
@@ -88,33 +89,33 @@
           </svg>
         </div>
       </div>
-      <form action="#">
-        <div class="wrap-input wrap-input--with-icon filters-popup__search">
-          <input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>
-          <label class="wrap-input__label" for="">Search</label>
-          <div class="wrap-input__icon">
-            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z" />
-            </svg>
-          </div>
-          <div class="wrap-input__line"></div>
-        </div>
-        <div class="row row--jcsb">
-          <div class="wrap-input filters-popup__datepicker">
-            <label class="wrap-input__label" [ngClass]="{'select-input_label': dateFrom}" for="">From</label>
+      <!--<form action="#">-->
+        <!--<div class="wrap-input wrap-input&#45;&#45;with-icon filters-popup__search">-->
+          <!--<input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>-->
+          <!--<label class="wrap-input__label" >Search</label>-->
+          <!--<div class="wrap-input__icon">-->
+            <!--<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">-->
+              <!--<path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z" />-->
+            <!--</svg>-->
+          <!--</div>-->
+          <!--<div class="wrap-input__line"></div>-->
+        <!--</div>-->
+        <!--<div class="row row&#45;&#45;jcsb">-->
+          <!--<div class="wrap-input filters-popup__datepicker">-->
+            <!--<label class="wrap-input__label" [ngClass]="{'select-input_label': dateFrom}" >From</label>-->
 
-            <my-date-picker name="from" [options]="myDatePickerOptions" [(ngModel)]="modelDateFrom" (inputFieldChanged)="onFromInputFieldChanged($event)"></my-date-picker>
-            <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
-          </div>
-          <div class="wrap-input filters-popup__datepicker">
-            <label class="wrap-input__label" [ngClass]="{'select-input_label': dateFrom}" for="">To</label>
+            <!--<my-date-picker name="from" [options]="myDatePickerOptions" [(ngModel)]="modelDateFrom" (inputFieldChanged)="onFromInputFieldChanged($event)"></my-date-picker>-->
+            <!--<div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>-->
+          <!--</div>-->
+          <!--<div class="wrap-input filters-popup__datepicker">-->
+            <!--<label class="wrap-input__label" [ngClass]="{'select-input_label': dateFrom}" >To</label>-->
 
-            <my-date-picker name="to" [options]="myDatePickerOptions" [(ngModel)]="modelDateTo" (inputFieldChanged)="onToInputFieldChanged($event)">></my-date-picker>
-            <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
-          </div>
-        </div>
-        <button (click)="closeFilterPopup()" class="btn filters-popup__btn">See <span>{{countOfEntries}}</span> results</button>
-      </form>
+            <!--<my-date-picker name="to" [options]="myDatePickerOptions" [(ngModel)]="modelDateTo" (inputFieldChanged)="onToInputFieldChanged($event)">></my-date-picker>-->
+            <!--<div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<button (click)="closeFilterPopup()" class="btn filters-popup__btn">See <span>{{countOfEntries}}</span> results</button>-->
+      <!--</form>-->
     </div>
     <!--filter-popup end-->
   </div>
@@ -126,42 +127,42 @@
         Open orders
       </h1>
     </div>
-    <form action="">
-      <div class="row orders__filters">
-        <div class="wrap-input wrap-input--with-icon orders__search">
-          <input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>
-          <label class="wrap-input__label" for="">Currency</label>
-          <div class="wrap-input__icon">
-            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z" />
-            </svg>
-          </div>
-          <div class="search-results dropdown search">
-            <ul class="dropdown__list">
-              <li *ngFor="let item of pairs" (click)="selectNewActiveCurrencyPair(item)" class="dropdown__item">{{item.currencyPairName}}</li>
-            </ul>
-          </div>
-          <div class="wrap-input__line"></div>
-        </div>
-        <div class="wrap-input orders__datepicker">
-          <label class="wrap-input__label" [ngClass]="{'select-input_label': dateFrom}" for="">From</label>
+    <!--<form action="">-->
+      <!--<div class="row orders__filters">-->
+        <!--<div class="wrap-input wrap-input&#45;&#45;with-icon orders__search">-->
+          <!--<input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>-->
+          <!--<label class="wrap-input__label" >Currency</label>-->
+          <!--<div class="wrap-input__icon">-->
+            <!--<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">-->
+              <!--<path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z" />-->
+            <!--</svg>-->
+          <!--</div>-->
+          <!--<div class="search-results dropdown search">-->
+            <!--<ul class="dropdown__list">-->
+              <!--<li *ngFor="let item of pairs" (click)="selectNewActiveCurrencyPair(item)" class="dropdown__item">{{item.currencyPairName}}</li>-->
+            <!--</ul>-->
+          <!--</div>-->
+          <!--<div class="wrap-input__line"></div>-->
+        <!--</div>-->
+        <!--<div class="wrap-input orders__datepicker">-->
+          <!--<label class="wrap-input__label" [ngClass]="{'select-input_label': dateFrom}" >From</label>-->
 
-          <my-date-picker name="from" [options]="myDatePickerOptions" [(ngModel)]="modelDateFrom" (inputFieldChanged)="onFromInputFieldChanged($event)">
+          <!--<my-date-picker name="from" [options]="myDatePickerOptions" [(ngModel)]="modelDateFrom" (inputFieldChanged)="onFromInputFieldChanged($event)">-->
+            <!--&lt;!&ndash;&gt;&ndash;&gt;-->
+          <!--</my-date-picker>-->
+          <!--<div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>-->
+        <!--</div>-->
+        <!--<div class="wrap-input orders__datepicker input-el">-->
+          <!--<label class="wrap-input__label" [ngClass]="{'select-input_label': dateTo}" >To</label>-->
+
+          <!--<my-date-picker class="input-el" name="to" [options]="myDatePickerOptions" [(ngModel)]="modelDateTo"-->
+            <!--(inputFieldChanged)="onToInputFieldChanged($event)">-->
             <!--&gt;-->
-          </my-date-picker>
-          <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
-        </div>
-        <div class="wrap-input orders__datepicker input-el">
-          <label class="wrap-input__label" [ngClass]="{'select-input_label': dateTo}" for="">To</label>
-
-          <my-date-picker class="input-el" name="to" [options]="myDatePickerOptions" [(ngModel)]="modelDateTo"
-            (inputFieldChanged)="onToInputFieldChanged($event)">
-            &gt;
-          </my-date-picker>
-          <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
-        </div>
-      </div>
-    </form>
+          <!--</my-date-picker>-->
+          <!--<div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</form>-->
     <!--table start-->
     <table class="table">
       <thead>
@@ -178,8 +179,8 @@
           <th class="table__cell-head table__cell-head--tal" style="width: 80px;"></th>
         </tr>
       </thead>
-      <tbody class="table__body" *ngIf="openOrders">
-        <tr class="table__row" *ngFor="let item of filteredOpenOrders | paginate: { itemsPerPage: countPerPage, currentPage: currentPage }">
+      <tbody class="table__body" *ngIf="orderItems">
+        <tr class="table__row" *ngFor="let item of orderItems | paginate: { itemsPerPage: countPerPage, currentPage: currentPage }">
           <td class="table__cell">
             <span>{{item.id}}</span>
           </td>
@@ -212,12 +213,12 @@
             <span>{{item.amountWithCommission}} USD</span>
           </td>
           <td class="table__cell">
-            <button class="btn btn--small btn--empty-red table__row-btn" style="width: 100%; max-width: 58px;" (click)="openPopup(item)">Cancel</button>
+            <!--<button class="btn btn&#45;&#45;small btn&#45;&#45;empty-red table__row-btn" style="width: 100%; max-width: 58px;" (click)="openPopup(item)">Cancel</button>-->
             <div class="revoke-request" [id]="'popup-' + item.id">
               <div class="revoke-request__title">Are you sure you want to cancel selected order?</div>
               <div class="revoke-request__button-wrap">
-                <button class="btn btn--small" (click)="cancelOrder()">Yes</button>
-                <button class="btn btn--small" (click)="closePopup()">No</button>
+                <!--<button class="btn btn&#45;&#45;small" (click)="cancelOrder()">Yes</button>-->
+                <!--<button class="btn btn&#45;&#45;small" (click)="closePopup()">No</button>-->
               </div>
               <div class="revoke-request__triangle"></div>
             </div>
