--- a/src/app/orders/open-orders/open-orders.component.scss
+++ b/src/app/orders/open-orders/open-orders.component.scss
@@ -19,23 +19,23 @@
 //      }
 //    }
 //  }
-  
+
   .paginator {
     //position: absolute;
     //right: 16px;
     //bottom: 12px;
   }
-  
+
   a.active {
     background-color: #237BEF !important;
     cursor: pointer;
   }
-  
+
   ::ng-deep .ngx-pagination {
     margin-bottom: 0 !important;
     display: flex;
   }
-  
+
   ::ng-deep .ngx-pagination li {
     width: 28px;
     height: 28px;
@@ -78,7 +78,7 @@
       bottom: 2px;
     }
   }
-  
+
   ::ng-deep .ngx-pagination a {
     display: flex !important;
     align-items: center !important;
@@ -97,20 +97,20 @@
       background-color: #237BEF !important;
     }
   }
-  
+
   ::ng-deep li.pagination-next a {
     &:after {
-      content: url('./../../../assets/img/paginator-next.svg') !important;
+      content: url('../../../assets/img/paginator-next.svg') !important;
       margin-left: 0 !important;
       display: block;
       width: 13px;
       height: 13px;
     }
   }
-  
+
   ::ng-deep li.pagination-previous a {
     &:before {
-      content: url('./../../../assets/img/paginator-prev.svg') !important;
+      content: url('../../../assets/img/paginator-prev.svg') !important;
       margin-right: 0 !important;
       display: block;
       width: 13px;
@@ -122,7 +122,7 @@
     height: 0;
     transition: 0.4s;
     display: none;
-  
+
     &-show {
       display: table-row;
       height: auto;
