--- a/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
@@ -9,7 +9,7 @@
           <!--<li class="dropdown__item">LTC</li>-->
           <!--<li class="dropdown__item">DASH</li>-->
         <!--</ul>-->
-        <div class="dropdown__btn currency-pair-info__btn" (click)="openSearchBar(0)">{{!firstCurrency ? 'BTC' : firstCurrency}}</div>
+        <div class="dropdown__btn currency-pair-info__btn" (click)="openSearchBar(0)" style="min-width: 65px;">{{!firstCurrency ? 'BTC' : firstCurrency}}</div>
       </div>
       <div class="currency-pair-info__change-pair"></div>
       <div class="dropdown currency-pair-info__dropdown">
@@ -34,11 +34,11 @@
       </div>
       <div class="currency-pair-info__price">{{!currentCurrencyInfo || !currentCurrencyInfo.currencyRate ? 0 :currentCurrencyInfo.currencyRate | replaceNumber:isFiat }} {{ secondCurrency }}</div>
     </div>
-    <div class="currency-pair-info__item" style="min-width: 120px;">
+    <div class="currency-pair-info__item" style="min-width: 130px;">
       <div class="currency-pair-info__item-title">24h hight</div>
       <span class="currency-pair-info__item-value">{{!currentCurrencyInfo ? 0 :currentCurrencyInfo.rateHigh | number:'1.0-8' | replaceNumber }}</span>
     </div>
-    <div class="currency-pair-info__item" style="min-width: 120px;">
+    <div class="currency-pair-info__item" style="min-width: 130px;">
       <div class="currency-pair-info__item-title">24h low</div>
       <span class="currency-pair-info__item-value">{{ !currentCurrencyInfo ? 0 :currentCurrencyInfo.rateLow | number:'1.0-8' | replaceNumber}}</span>
     </div>
