--- a/src/assets/scss/components/_currency-pair-info.scss
+++ b/src/assets/scss/components/_currency-pair-info.scss
@@ -24,6 +24,11 @@
     align-items: center;
   }
   &__dropdown {
+    .dropdown__list{
+      -webkit-border-radius: 4px;
+      -moz-border-radius: 4px;
+      border-radius: 4px;
+    }
     .dropdown__btn {
       font-size: 18px;
       color: #000;
@@ -103,10 +108,19 @@
         font-size: 24px;
       }
       .dropdown__list{
-        width: 100%;
+        width: auto;
       }
       .dropdown__item{
-        font-size: 18px;
+        padding: 10px 12px;
+        font-size: 24px;
+        &:first-child{
+          border-top-right-radius: 4px;
+          border-top-left-radius: 4px;
+        }
+        &:last-child{
+          border-bottom-right-radius: 4px;
+          border-bottom-left-radius: 4px;
+        }
       }
     }
     &__change-pair {
@@ -150,6 +164,9 @@
     box-shadow: none;
     background-color: #252543;
     &__dropdown {
+      .dropdown__list{
+        background-color: #2E304D;
+      }
       .dropdown__btn {
         color: #fff;
         &:after {
