--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -82,9 +82,9 @@
         </div>
       </div>
 
-      <!-- <div [hidden]="!(loading$ | async)">
+      <div [hidden]="!(loading$ | async)">
         <app-loader size="small"></app-loader>
-      </div> -->
+      </div>
       <button class="btn btn--active balance__title-btn" (click)="openRefillBalancePopup(true)">
         {{'Refill balance' | translate}}
       </button>
